--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "react-multi-carousel": "2.5.5"
+    "react-multi-carousel": "2.5.5",
+    "react-typed": "1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
